cluster/apps/media/audiobookshelf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: media
  labels:
    k8s-app: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: audiobookshelf
  template:
    metadata:
      labels:
        k8s-app: audiobookshelf
    spec:
      containers:
      - name: audiobookshelf
        image: advplyr/audiobookshelf:1.6.67
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: config
          - mountPath: /metadata
            name: metadata
          - mountPath: /audiobooks
            name: audiobooks
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-ceph-audiobookshelf-config
        - name: metadata
          persistentVolumeClaim:
            claimName: pvc-ceph-audiobookshelf-metadata
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-media-pvc
