cluster/apps/media/audiobookshelf/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: audiobookshelf
  name: audiobookshelf
  namespace: media
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    k8s-app: audiobookshelf
