cluster/apps/media/audiobookshelf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf-ingress
  namespace: media
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    # kubernetes.io/ingress.class: nginx-external
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Real-IP, X-Frame-Options, X-Content-Type-Options, X-Forwarded-Proto"
spec:
  ingressClassName: "nginx-external"
  rules:
  - host: ab.${SECRET_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: audiobookshelf
            port:
              number: 80
  tls:
  - hosts:
    - ab.${SECRET_DOMAIN}
    secretName: audiobookshelf-tls
status:
  loadBalancer: {}
